Merge code, add docs, and redesigned properties with more validation capabilities